redesigned - upgraded to Astro v5

--- a/src/components/global/Cta.astro
+++ b/src/components/global/Cta.astro
@@ -1,92 +1,71 @@
-<section class="bg-zinc-100 2xl:max-w-7xl mx-auto">
-  <div class="relative">
-    <div class="lg:absolute lg:inset-0 lg:left-1/2">
-      <img
-        class="object-cover w-full h-64 sm:h-80 lg:absolute object-left lg:h-full"
-        src="https://www.colorsandfonts.com/images/bundle.png"
-        alt=""
-      />
-    </div>
-    <div
-      class="pt-16 pb-24 sm:pb-32 sm:pt-24 lg:mx-auto lg:grid lg:max-w-7xl lg:grid-cols-2 lg:pt-32">
-      <div class="px-8 lg:px-12">
-        <div class="max-w-lg mx-auto lg:mx-0 lg:pr-12">
-          <div class="flex flex-wrap">
-            <div class="flex items-center text-sm font-medium text-black">
-              <svg
-                class="flex-none w-4 h-4 stroke-current"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                viewBox="0 0 100 100"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M63.3694 5.33018C64.129 6.27325 64.5164 7.54562 65.291 10.0906L82.215 65.6862C75.8581 62.3873 69.0351 60.0773 61.9815 58.836L50.9623 21.5986C50.8744 21.3015 50.6928 21.0408 50.4445 20.8556C50.1962 20.6704 49.8945 20.5705 49.5848 20.571C49.275 20.5715 48.9737 20.6723 48.7259 20.8583C48.4782 21.0443 48.2974 21.3055 48.2105 21.6029L37.3247 58.8172C30.2392 60.0528 23.3848 62.3665 17 65.6778L34.0071 10.0776C34.7842 7.53708 35.1728 6.26679 35.9324 5.32559C36.603 4.49465 37.4753 3.84929 38.466 3.45101C39.5884 3 40.9167 3 43.5734 3H55.7208C58.381 3 59.7111 3 60.8344 3.45205C61.8261 3.85109 62.6988 4.49772 63.3694 5.33018Z"
-                  fill="black"
-                ></path>
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M65.3945 68.3321C62.6045 70.7178 57.0359 72.3448 50.6215 72.3448C42.7487 72.3448 36.15 69.8938 34.399 66.5975C33.773 68.4867 33.6327 70.6488 33.6327 72.03C33.6327 72.03 33.2203 78.812 37.9374 83.5291C37.9374 81.0797 39.9229 79.0942 42.3722 79.0942C46.5704 79.0942 46.5657 82.7568 46.5619 85.7284L46.5616 85.9936C46.5616 90.5039 49.3182 94.3703 53.2386 96C52.6531 94.7957 52.3246 93.4433 52.3246 92.0141C52.3246 87.7124 54.85 86.1107 57.7851 84.2492C60.1204 82.7681 62.7151 81.1226 64.5033 77.8215C65.4364 76.0991 65.9662 74.1264 65.9662 72.03C65.9662 70.7407 65.7658 69.4982 65.3945 68.3321V68.3321Z"
-                  fill="#d94dd1"
-                  stroke="#d94dd1"
-                ></path></svg
-              ><span class="ml-2.5"> Astro</span>
-            </div>
-            <div class="flex items-center ml-6 text-sm font-medium text-black">
-              <svg
-                viewBox="0 0 256 154"
-                aria-label="Tailwind CSS"
-                class="flex-none w-4 h-4 stroke-current"
-                width="64"
-                height="64"
-                astro-icon="logos:tailwindcss-icon">
-                <path
-                  fill="#38bdf9"
-                  d="M128 0C93.867 0 72.533 17.067 64 51.2 76.8 34.133 91.733 27.733 108.8 32c9.737 2.434 16.697 9.499 24.401 17.318C145.751 62.057 160.275 76.8 192 76.8c34.133 0 55.467-17.067 64-51.2-12.8 17.067-27.733 23.467-44.8 19.2-9.737-2.434-16.697-9.499-24.401-17.318C174.249 14.743 159.725 0 128 0zM64 76.8C29.867 76.8 8.533 93.867 0 128c12.8-17.067 27.733-23.467 44.8-19.2 9.737 2.434 16.697 9.499 24.401 17.318C81.751 138.857 96.275 153.6 128 153.6c34.133 0 55.467-17.067 64-51.2-12.8 17.067-27.733 23.467-44.8 19.2-9.737-2.434-16.697-9.499-24.401-17.318C110.249 91.543 95.725 76.8 64 76.8z"
-                ></path></svg
-              ><span class="ml-2.5"> Tailwind CSS</span>
-            </div>
-          </div>
-          <p
-            class="mt-12 text-3xl font-black tracking-tight text-black uppercase font-display">
-            Lexington Themes
-          </p>
-          <p
-            class="max-w-2xl mt-4 text-base font-medium tracking-tight text-black">
-            Free and premium multipage themes &amp; UI Kits For freelancers,
-            developers, businesses, and personal use. Beautifully crafted with
-            Astro.js, and Tailwind CSS
-            <span class="lg:block">— Simple &amp; easy to customise.</span>
-          </p>
-          <p
-            class="mt-8 text-2xl tracking-tight text-black fon4t-medium font-display lg:pl-4 lg:border-l-4 border-accent-600">
-            Use the code<span class="text-accent-600"> LEXINGTON30</span>
-            and
-            <span class="text-black opacity-70 md:block"
-              >get a 30% discount on the bundle</span
-            >
-          </p>
-          <p
-            class="max-w-2xl mt-8 text-base font-medium tracking-tight text-black">
-            Get lifetime access to every theme available on Lexington Themes for
-            <span class="text-accent-600">$199</span> and own them forever. Plus,
-            new themes, lifetime updates, use on unlimited projects and enjoy lifetime
-            support. No subscription required!
-          </p>
+---
+const ads = [
+  {
+    title: "Lexington Themes",
+    event: "lexingtonAdd",
+    href: "https://lexingtonthemes.com/",
+    imgSrc: "https://www.colorsandfonts.com/images/lexington.png",
+    logoOne: "https://www.colorsandfonts.com/images/addIcons/astro.svg",
+    logoTwo: "https://www.colorsandfonts.com/images/addIcons/tailwind.svg",
+    description:
+      "Free and premium multipage themes & UI Kits For freelancers, developers, businesses, and personal use crafted with Astro JS & Tailwind CSS",
+  },
+  {
+    title: "Oxbow UI",
+    event: "oxbowAdd",
+    href: "https://oxbowui.com/",
+    imgSrc: "https://www.colorsandfonts.com/images/oxbow.png",
+    logoOne: "https://www.colorsandfonts.com/images/addIcons/alpine.svg",
+    logoTwo: "https://www.colorsandfonts.com/images/addIcons/tailwind.svg",
+    description:
+      "Premium components, elements and layouts For freelancers, developers, businesses, and personal use. Beautifully crafted with Tailwind CSS and Alpine JS",
+  },
+];
+---
 
-          <div class="mt-12">
-            <a
-              href="https://lexingtonthemes.com"
-              class="inline-flex items-center justify-center w-full gap-4 px-6 py-3 text-sm font-medium text-white transition rounded-xl bg-accent-600 group active:text-gray-900/60 active:transition-none outline-offset-2 hover:bg-white hover:text-black lg:w-auto"
-              >See all templates <span>→</span>
-            </a>
+<section>
+  <div class="px-8 mx-auto md:px-12 lg:px-24 max-w-7xl relative">
+    <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
+      {
+        ads.map((ad) => (
+          <div class="group relative  ring-4 ring-base-50 border border-base-200 cursor-pointer   rounded-2xl overflow-hidden">
+            <div class="flex flex-col items-start justify-between h-full ">
+              <img
+                alt={ad.description}
+                width="400"
+                height="240"
+                class="block w-full h-full  cursor-pointer overflow-hidden  object-cover  aspect-[16/8] object-top"
+                src={ad.imgSrc}
+                style={{ color: "transparent" }}
+              />
+              <div class="p-8 bg-white border-b border-slate-200 order-first">
+                <div class="flex items-center gap-4">
+                  <img src={ad.logoTwo} alt="logo" class="size-4" />
+                  ·
+                  <img src={ad.logoOne} alt="logo" class="size-4" />
+                </div>
+                <h2 class=" font-medium text-xl text-slate-800 mt-4">
+                  {ad.title}
+                  <a
+                    href={ad.href}
+                    title={ad.title}
+                    id={ad.event}
+                    data-umami-event={ad.event}
+                  >
+                    <span class="absolute inset-0" />
+                  </a>
+                </h2>
+                <p class="text-slate-500 text-base g mt-2">{ad.description}</p>
+                <div class="flex mt-4">
+                  <div class="flex items-center justify-center transition-all duration-200 focus:ring-2 focus:outline-none text-white bg-accent-950 group-hover:bg-accent-700 focus:ring-accent-500/50 h-9 px-4 py-2 text-sm font-medium rounded-md">
+                    Visit {ad.title}
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
+        ))
+      }
     </div>
   </div>
 </section>
