--- a/src/components/infopages/Terms.astro
+++ b/src/components/infopages/Terms.astro
@@ -1,20 +1,23 @@
 <section>
   <div
-    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24"
+  >
     <div>
       <div class="relative mx-auto max-w-[40rem] pt-20 pb-24">
         <h1
-          class="text-4xl tracking-tight font-medium text-black md:text-5xl font-display">
+          class="text-4xl tracking-tight font-medium text-black md:text-5xl font-display"
+        >
           Terms and conditions
         </h1>
-        <p class="mt-4 text-base leading-7 text-gray-500">
+        <p class="mt-4 text-base leading-7 text-base-500">
           Last updated on January 01, 2023
         </p>
       </div>
     </div>
     <div>
       <div
-        class="mx-auto max-w-[40rem] prose-base prose text-gray-500 prose-h3:text-black prose-a:font-semibold prose-a:text-accent-300 hover:prose-a:text-black">
+        class="mx-auto max-w-[40rem] prose-base prose text-base-500 prose-h3:text-black prose-a:font-semibold prose-a:text-accent-300 hover:prose-a:text-black"
+      >
         <p>
           This privacy policy sets out how Unwrapped AB collects, processes and
           uses your Personal Information through your use of our Services.
