--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,89 +1,72 @@
-<section>
-  <div
-    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
-    <div class="text-center max-w-4xl mx-auto">
-      <div class="sm:flex sm:justify-center">
-        <div
-          class="relative rounded-full py-1 px-3 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
-          <a
-            href="https://lexingtonthemes.com/free-templates/"
-            class="font-semibold text-accent-600"
-            ><span class="absolute inset-0" aria-hidden="true"></span>
-            <span class="block lg:inline">
-              More free & Premium templates <span aria-hidden="true"
-                >&rarr;</span
-              >
-            </span>
-          </a>
-        </div>
-      </div>
-      <p
-        class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display mt-8">
+---
+const featuresList = [
+  {
+    title: "Astro, Tailwind CSS and Alpine.js",
+    description: "These are the popular technologies behind Astrosaas.",
+  },
+  {
+    title: "Includes 6 pages",
+    description:
+      "You will find this landing, FAQ, terms, privacy, sign up, and sign in pages.",
+  },
+  {
+    title: "Different sections",
+    description:
+      "The starter includes different feature sections, a pricing table, testimonial, CTA, and full forms.",
+  },
+];
+---
+
+<section class="overflow-hidden">
+  <div class="px-8 pt-32 mx-auto md:px-12 lg:px-24 max-w-7xl relative">
+    <div class="max-w-2xl text-center mx-auto lg:text-balance">
+      <p class="text-sm leading-normal font-bold uppercase text-accent-600">
+        Tagline
+      </p>
+      <h2
+        class="text-xl leading-tight tracking-tight sm:text-2xl md:text-3xl lg:text-4xl mt-4 font-semibold text-base-900"
+      >
         A starter template built with Astro and Tailwind CSS for your next
         project
+      </h2>
+      <p class="text-base leading-normal mt-4 text-base-500 font-medium">
+        The fastest method for working together on staging and temporary
+        environments.
       </p>
-      <p class="text-gray-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
-        Putting together a directory website was a challenge. Superstash lets
-        you focus on the content and makes the entire process effortless.
-      </p>
-    </div>
-    <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
-      <a
-        class="items-center justify-center border-gray-200 h-10 font-medium rounded-lg focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full border"
-        href="https://github.com/michael-andreuzza/astrosaas">GitHub</a
+      <div
+        class="flex flex-wrap items-center gap-2 justify-center mx-auto mt-12"
       >
-      <a
-        class="items-center justify-center h-10 font-medium rounded-lg focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
-        href="https://lexingtonthemes.com"
-        >Lexington Themes &nbsp; &rarr;
-      </a>
+        <a
+          href="https://github.com/michael-andreuzza/astrosaas"
+          class="flex items-center justify-center transition-all duration-200 focus:ring-2 focus:outline-none text-base-500 bg-white hover:text-accent-500 ring-1 ring-base-200 focus:ring-accent-500 h-9 px-4 py-2 text-sm font-medium rounded-md"
+        >
+          GitHub
+        </a>
+        <a
+          href="https://lexingtonthemes.com"
+          class="flex items-center justify-center transition-all duration-200 focus:ring-2 focus:outline-none text-white bg-accent-600 hover:bg-accent-700 focus:ring-accent-500/50 h-9 px-4 py-2 text-sm font-medium rounded-md"
+        >
+          More themes
+        </a>
+      </div>
     </div>
     <dl
-      class="lg:gap-x-8 lg:grid-cols-3 max-w-4xl mt-8 mx-auto sm:gap-x-6 sm:gap-y-12 sm:grid sm:grid-cols-2 sm:space-y-0 space-y-6 text-center text-sm items-start">
-      <div class="text-gray-500">
-        <strong class="text-gray-700"
-          >Astro, Tailwind CSS and Alpine.js</strong
-        > ━ This are the popular technologies behind Astrosaas.
-      </div>
-      <div class="text-gray-500">
-        <strong class="text-gray-700">Includes 6 pages</strong> ━ You will find
-        this landing, faq, terms,privacy,sign up and sign in pages.
-      </div>
-      <div class="text-gray-500">
-        <strong class="text-gray-700">Different section</strong> ━ The starter
-        includes different feature sections, a pricing table, testmionial, CTA
-        and full forms. more.
-      </div>
+      class="lg:gap-x-8 lg:grid-cols-3 max-w-4xl mt-8 mx-auto sm:gap-x-6 sm:gap-y-12 sm:grid sm:grid-cols-2 sm:space-y-0 space-y-6 text-center text-sm items-start"
+    >
+      {
+        featuresList.map(({ title, description }) => (
+          <div class="text-base-500 lg:text-balance">
+            <strong class="text-base-700">{title}</strong> ━ {description}
+          </div>
+        ))
+      }
     </dl>
-
     <div class="relative w-full mx-auto max-w-7xl items-center py-12 pb-12">
-      <div class="bg-gray-100 p-8 rounded-3xl">
-        <img
-          alt="#_"
-          class="relative w-full border border-gray-200 lg:rounded-2xl object-cover rounded shadow-2xl"
-          src="https://brightlight.lexingtonthemes.com/assets/dashboard.svg"
-        />
-      </div>
-    </div>
-    <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
-      <div class="flex justify-center col-span-1 ">
-        <img alt="logo" class="h-8" src="/Figma.svg" />
-      </div>
-      <div class="flex justify-center col-span-1 ">
-        <img alt="logo" class="h-8" src="/Canva.svg" />
-      </div>
-      <div class="flex justify-center col-span-1 ">
-        <img alt="logo" class="h-8" src="/Stripe.svg" />
-      </div>
-      <div class="flex justify-center col-span-1 ">
-        <img alt="logo" class="h-8" src="/Gitlab.svg" />
-      </div>
-      <div class="flex justify-center col-span-1 ">
-        <img alt="logo" class="h-8" src="/Linear.svg" />
-      </div>
-      <div class="flex justify-center col-span-1 ">
-        <img alt="logo" class="h-8" src="/Gumroad.svg" />
-      </div>
+      <img
+        alt="#_"
+        class="relative w-full ring-4 ring-base-50 border border-base-200 lg:rounded-2xl object-cover rounded"
+        src="https://oxbowui.com/images/dashboardLight.svg"
+      />
     </div>
   </div>
 </section>
