--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -1,88 +1,241 @@
 <section>
-  <div
-    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12">
-    <div
-      class="grid grid-cols-1 gap-4 mt-6 items-center list-none lg:grid-cols-2 lg:gap-24">
-      <div class="text-center lg:text-left">
-        <div>
-          <p
-            class="text-4xl tracking-tight font-medium text-black md:text-5xl font-display">
-            Multilayered security
-          </p>
-          <p class="text-base mt-4 text-gray-500">
-            The template is ready for production and can be deployed anywhere
-            static websites can, such as Vercel, Netlify, or GitHub Pages. I
-            tested the template in the latest versions of all browsers to handle
-            lots of edge-cases you might encounter.
-          </p>
+  <div class="px-8 py-24 mx-auto md:px-12 lg:px-24 max-w-7xl relative">
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-12 items-center">
+      <div class="lg:order-last">
+        <p class="text-sm leading-normal font-bold uppercase text-accent-600">
+          Tagline
+        </p>
+        <h2
+          class="text-xl leading-tight tracking-tight sm:text-2xl md:text-3xl lg:text-4xl mt-4 font-semibold text-base-900"
+        >
+          Transforming the banking experience for a digital future
+        </h2>
+        <p class="text-base leading-normal mt-4 text-base-500 font-medium">
+          The fastest method for working together on staging and temporary
+          environments.
+        </p>
+        <div class="flex flex-wrap items-center gap-2 mx-auto mt-12">
+          <button
+            class="flex items-center justify-center transition-all duration-200 focus:ring-2 focus:outline-none text-white bg-accent-600 hover:bg-accent-700 focus:ring-accent-500/50 h-9 px-4 py-2 text-sm font-medium rounded-md"
+          >
+            Get started
+          </button>
+          <button
+            class="flex items-center justify-center transition-all duration-200 focus:ring-2 focus:outline-none text-base-500 bg-white hover:text-accent-500 ring-1 ring-base-200 focus:ring-accent-500 h-9 px-4 py-2 text-sm font-medium rounded-md"
+          >
+            Learn more
+          </button>
         </div>
       </div>
-      <div
-        class="lg:mt-0 mt-12 h-full hidden lg:block rounded-3xl overflow-hidden border border-gray-200">
-        <div class="bg-gray-100 p-8 rounded-2xl overflow-hidden">
-          <img
-            alt="Lexingtøn thumbnail"
-            class="border border-gray-200 lg:rounded-3xl object-cover rounded shadow-2xl"
-            src="https://brightlight.lexingtonthemes.com/assets/dashboard.svg"
-          />
-        </div>
+      <div class="lg:col-span-2">
+        <img
+          class="object-cover h-full ring-4 ring-base-50 border border-base-200 rounded-2xl"
+          src="https://oxbowui.com/images/dashboardLight.svg"
+          alt="#_"
+        />
+       
       </div>
     </div>
-    <div class="mt-24 w-full gap-12 grid grid-cols-1 lg:gap-24 lg:grid-cols-3">
+    <div
+      class="gap-x-2 gap-y-14 mt-12 lg:gap-12 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3"
+    >
       <div>
-        <div class="gap-3 lg:inline-flex lg:items-center">
-          <div
-            class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
-            <ion-icon
-              aria-label="scan outline"
-              class="hydrated md h-5 w-5"
-              name="scan-outline"
-              role="img"
-            ></ion-icon>
-          </div><p
-            class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
-            Developer experience
+        <div>
+          <h3
+            class="text-base leading-normal sm:text-lg md:text-xl text-base-900 font-medium"
+          >
+            Innovative Design
+          </h3>
+          <p class="text-base leading-normal mt-2 text-base-500 font-medium">
+            Our cutting-edge design offers a fresh, modern look that transforms
+            your project into a standout experience.
           </p>
-        </div><p class="text-gray-500 text-sm mt-4">
-          Everything I build is keyboard accessible, and I meticulously write
-          the markup to deliver the best screenreader experience.
-        </p>
-      </div><div>
-        <div class="gap-3 lg:inline-flex lg:items-center">
-          <div
-            class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
-            <ion-icon
-              aria-label="scan outline"
-              class="hydrated md h-5 w-5"
-              name="scan-outline"
-              role="img"
-            ></ion-icon>
-          </div><p
-            class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
-            Designers go-to app
+        </div>
+        <ul
+          role="list"
+          class="space-y-1 mt-6 text-base font-medium text-base-900"
+        >
+          <li>
+            <div class="flex items-center gap-4">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check size-5 text-accent-600"
+                slot="icon"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path
+                  d="M17 3.34a10 10 0 1 1 -14.995 8.984l-.005 -.324l.005 -.324a10 10 0 0 1 14.995 -8.336zm-1.293 5.953a1 1 0 0 0 -1.32 -.083l-.094 .083l-3.293 3.292l-1.293 -1.292l-.094 -.083a1 1 0 0 0 -1.403 1.403l.083 .094l2 2l.094 .083a1 1 0 0 0 1.226 0l.094 -.083l4 -4l.083 -.094a1 1 0 0 0 -.083 -1.32z"
+                  stroke-width="0"
+                  fill="currentColor"></path>
+              </svg>
+              <span class="text-base leading-normal">
+                Revolutionizing communication
+              </span>
+            </div>
+          </li>
+          <li>
+            <div class="flex items-center gap-4">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check size-5 text-accent-600"
+                slot="icon"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path
+                  d="M17 3.34a10 10 0 1 1 -14.995 8.984l-.005 -.324l.005 -.324a10 10 0 0 1 14.995 -8.336zm-1.293 5.953a1 1 0 0 0 -1.32 -.083l-.094 .083l-3.293 3.292l-1.293 -1.292l-.094 -.083a1 1 0 0 0 -1.403 1.403l.083 .094l2 2l.094 .083a1 1 0 0 0 1.226 0l.094 -.083l4 -4l.083 -.094a1 1 0 0 0 -.083 -1.32z"
+                  stroke-width="0"
+                  fill="currentColor"></path>
+              </svg>
+              <span class="text-base leading-normal">
+                Enhancing productivity
+              </span>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <div>
+          <h3
+            class="text-base leading-normal sm:text-lg md:text-xl text-base-900 font-medium"
+          >
+            Powerful Functionality
+          </h3>
+          <p class="text-base leading-normal mt-2 text-base-500 font-medium">
+            Equipped with advanced features and tools, our solution effortlessly
+            manages complex tasks and workflows.
           </p>
-        </div><p class="text-gray-500 text-sm mt-4">
-          I tested the template in the latest versions of all browsers to handle
-          lots of edge-cases you might encounter.
-        </p>
-      </div><div>
-        <div class="gap-3 lg:inline-flex lg:items-center">
-          <div
-            class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
-            <ion-icon
-              aria-label="scan outline"
-              class="hydrated md h-5 w-5"
-              name="scan-outline"
-              role="img"
-            ></ion-icon>
-          </div><p
-            class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
-            Easy onboarding
+        </div>
+        <ul
+          role="list"
+          class="space-y-1 mt-6 text-base font-medium text-base-900"
+        >
+          <li>
+            <div class="flex items-center gap-4">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check size-5 text-accent-600"
+                slot="icon"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path
+                  d="M17 3.34a10 10 0 1 1 -14.995 8.984l-.005 -.324l.005 -.324a10 10 0 0 1 14.995 -8.336zm-1.293 5.953a1 1 0 0 0 -1.32 -.083l-.094 .083l-3.293 3.292l-1.293 -1.292l-.094 -.083a1 1 0 0 0 -1.403 1.403l.083 .094l2 2l.094 .083a1 1 0 0 0 1.226 0l.094 -.083l4 -4l.083 -.094a1 1 0 0 0 -.083 -1.32z"
+                  stroke-width="0"
+                  fill="currentColor"></path>
+              </svg>
+              <span class="text-base leading-normal">
+                Unlocking innovative solutions
+              </span>
+            </div>
+          </li>
+          <li>
+            <div class="flex items-center gap-4">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check size-5 text-accent-600"
+                slot="icon"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path
+                  d="M17 3.34a10 10 0 1 1 -14.995 8.984l-.005 -.324l.005 -.324a10 10 0 0 1 14.995 -8.336zm-1.293 5.953a1 1 0 0 0 -1.32 -.083l-.094 .083l-3.293 3.292l-1.293 -1.292l-.094 -.083a1 1 0 0 0 -1.403 1.403l.083 .094l2 2l.094 .083a1 1 0 0 0 1.226 0l.094 -.083l4 -4l.083 -.094a1 1 0 0 0 -.083 -1.32z"
+                  stroke-width="0"
+                  fill="currentColor"></path>
+              </svg>
+              <span class="text-base leading-normal">
+                Enabling interoperability
+              </span>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <div>
+          <h3
+            class="text-base leading-normal sm:text-lg md:text-xl text-base-900 font-medium"
+          >
+            Easy Integration
+          </h3>
+          <p class="text-base leading-normal mt-2 text-base-500 font-medium">
+            Integrating with existing systems is smooth and hassle-free, thanks
+            to our incredible flexible approach.
           </p>
-        </div><p class="text-gray-500 text-sm mt-4">
-          The template is ready for production and can be deployed anywhere
-          static websites can, such as Vercel, Netlify, or GitHub Pages,..
-        </p>
+        </div>
+        <ul
+          role="list"
+          class="space-y-1 mt-6 text-base font-medium text-base-900"
+        >
+          <li>
+            <div class="flex items-center gap-4">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check size-5 text-accent-600"
+                slot="icon"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path
+                  d="M17 3.34a10 10 0 1 1 -14.995 8.984l-.005 -.324l.005 -.324a10 10 0 0 1 14.995 -8.336zm-1.293 5.953a1 1 0 0 0 -1.32 -.083l-.094 .083l-3.293 3.292l-1.293 -1.292l-.094 -.083a1 1 0 0 0 -1.403 1.403l.083 .094l2 2l.094 .083a1 1 0 0 0 1.226 0l.094 -.083l4 -4l.083 -.094a1 1 0 0 0 -.083 -1.32z"
+                  stroke-width="0"
+                  fill="currentColor"></path>
+              </svg>
+              <span class="text-base leading-normal">
+                Streamlining operations
+              </span>
+            </div>
+          </li>
+          <li>
+            <div class="flex items-center gap-4">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="icon icon-tabler icons-tabler-outline icon-tabler-circle-check size-5 text-accent-600"
+                slot="icon"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path
+                  d="M17 3.34a10 10 0 1 1 -14.995 8.984l-.005 -.324l.005 -.324a10 10 0 0 1 14.995 -8.336zm-1.293 5.953a1 1 0 0 0 -1.32 -.083l-.094 .083l-3.293 3.292l-1.293 -1.292l-.094 -.083a1 1 0 0 0 -1.403 1.403l.083 .094l2 2l.094 .083a1 1 0 0 0 1.226 0l.094 -.083l4 -4l.083 -.094a1 1 0 0 0 -.083 -1.32z"
+                  stroke-width="0"
+                  fill="currentColor"></path>
+              </svg>
+              <span class="text-base leading-normal">
+                Simplifying implementation
+              </span>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
