--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,55 +1,79 @@
 ---
 import "../styles/global.css";
 ---
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width" />
 <meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="author" content="Michael Andreuzza" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<!-- Basic Meta Tags -->
+<title>Your Website Title</title>
 <meta
-  name="your keywords"
-  content="wallpaper,black wallpaper, gradient wallpaper,aesthetic wallpaper,iphone wallpaper,wallpaper iphone,white wallpaper,pink wallpaper"
+  name="description"
+  content="A brief description of your website content."
 />
-<!-- Favicon guidelines generated with https://realfavicongenerator.net/ -->
-<link
-  rel="apple-touch-icon"
-  sizes="180x180"
-  href="/images/favicons/apple-touch-icon.png"
+<meta name="keywords" content="keyword1, keyword2, keyword3" />
+<meta name="author" content="Your Name or Company Name" />
+
+<!-- Favicons -->
+<link rel="icon" href="/favicon.ico" sizes="any" />
+<link rel="icon" href="/icon.svg" type="image/svg+xml" />
+<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/manifest.webmanifest" />
+
+<!-- Favicon for IE -->
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+
+<!-- Favicons for different sizes -->
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.yourwebsite.com/" />
+<meta property="og:title" content="Your Website Title" />
+<meta
+  property="og:description"
+  content="A brief description of your website content."
 />
-<link
-  rel="icon"
-  type="image/png"
-  sizes="32x32"
-  href="/images/favicons/favicon-32x32.png"
+<meta
+  property="og:image"
+  content="https://www.yourwebsite.com/path/to/image.jpg"
 />
-<link
-  rel="icon"
-  type="image/png"
-  sizes="16x16"
-  href="/images/favicons/favicon-16x16.png"
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://www.yourwebsite.com/" />
+<meta property="twitter:title" content="Your Website Title" />
+<meta
+  property="twitter:description"
+  content="A brief description of your website content."
 />
-<link rel="manifest" href="/images/favicons/site.webmanifest" />
-<link
-  rel="mask-icon"
-  href="/images/favicons/safari-pinned-tab.svg"
-  color="#ffffff"
+<meta
+  property="twitter:image"
+  content="https://www.yourwebsite.com/path/to/image.jpg"
 />
-<meta name="msapplication-TileColor" content="#ffffff" />
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://www.yourwebsite.com/" />
+
+<!-- Additional SEO -->
+<meta name="robots" content="index, follow" />
+<meta name="googlebot" content="index, follow" />
+
+<!-- Apple Touch Icon (already included in favicons, but keeping for backwards compatibility) -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+
+<!-- Theme Color for Mobile Browsers -->
 <meta name="theme-color" content="#ffffff" />
-<!--Ionicons -->
-<script
-  type="module"
-  src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-></script>
+
+<!-- For IE -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
 <!--
 https://rsms.me/inter/
 -->
 <link rel="preconnect" href="https://rsms.me/" />
 <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap" rel="stylesheet">
 <!---- Alpine  -->
 <script defer src="https://unpkg.com/alpinejs@3.10.5/dist/cdn.min.js"></script>
