--- a/src/components/infopages/Faq.astro
+++ b/src/components/infopages/Faq.astro
@@ -1,19 +1,16 @@
 <section>
-  <div
-    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12"
-  >
+  <div class="px-8 py-32 mx-auto md:px-12 lg:px-24 max-w-7xl">
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 lg:gap-12">
       <div class="text-center lg:text-left">
-        <div>
-          <p
-            class="text-3xl font-normal tracking-tight text-black font-display"
-          >
-            Frequently asked questions
-          </p>
-          <p class="text-base mt-4 text-zinc-500">
-            Answers to commonly asked questions about our platform
-          </p>
-        </div>
+       
+        <p
+          class="text-xl leading-tight tracking-tight sm:text-2xl md:text-3xl lg:text-4xl font-semibold text-base-900 lg:text-balance"
+        >
+          Frequently asked questions
+        </p>
+        <p class="text-base leading-normal mt-4 text-base-500 font-medium">
+          Answers to commonly asked questions about our platform
+        </p>
       </div>
       <div
         x-data="{
@@ -35,7 +32,7 @@
           >
             <span>How does end-to-end encryption work?</span>
             <svg
-              class="w-5 h-5 duration-300 ease-out text-accent-500 -rotate-[45deg]"
+              class="size-5 duration-300 ease-out text-accent-500 -rotate-[45deg]"
               :class="{ '-rotate-[45deg]': activeAccordion==id }"
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
