--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -1,148 +1,209 @@
-<section id="features">
-  <div
-    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12"
-  >
-    <div class="mx-auto max-w-xl text-center">
-      <div>
-        <p
-          class="text-4xl tracking-tight font-medium text-black md:text-5xl font-display"
-        >
-          I am a slightly longer heading than the others
-        </p><p
-          class="mt-4 text-lg text-na mx-auto tracking-tight text-gray-500"
-        >
-          If you could kick the person in the pants responsible for most of your
-          trouble, you wouldn't sit for a month
-        </p>
-      </div>
+<section>
+  <div class="px-8 py-20 mx-auto md:px-12 lg:px-24 max-w-7xl ">
+    <div class="text-center max-w-2xl mx-auto lg:text-balance">
+      <p class="text-sm leading-normal font-bold uppercase text-accent-600">
+        Tagline
+      </p>
+      <h2
+        class="text-xl leading-tight tracking-tight sm:text-2xl md:text-3xl lg:text-4xl mt-4 font-semibold text-base-900 lg:text-balance"
+      >
+        Transforming the banking experience for a digital future
+      </h2>
+      <p class="text-base leading-normal mt-4 text-base-500 font-medium">
+        The fastest method for working together on staging and temporary
+        environments.
+      </p>
     </div>
-    <div>
-      <div class="mx-auto max-w-7xl pt-12">
-        <h2 class="sr-only">Features.</h2><div>
-          <div
-            class="grid gap-12 grid-cols-1 lg:space-y-0 lg:text-center md:grid-cols-3"
-          >
-            <div>
-              <div>
-                <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
-                >
-                  <ion-icon
-                    aria-label="scan outline"
-                    class="hydrated md h-4 w-4"
-                    name="scan-outline"
-                    role="img"></ion-icon>
-                </div><p
-                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
-                >
-                  Built with Astro.js.
-                </p>
-              </div><div class="mt-4 text-gray-500 text-sm">
-                Astro is an all-in-one web framework for building fast,
-                content-focused websites.
-              </div>
-            </div><div>
-              <div>
-                <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
-                >
-                  <ion-icon
-                    aria-label="scan outline"
-                    class="hydrated md h-4 w-4"
-                    name="scan-outline"
-                    role="img"></ion-icon>
-                </div><p
-                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
-                >
-                  Styled with Tailwind CSS.
-                </p>
-              </div><div class="mt-4 text-gray-500 text-sm">
-                Tailwind CSS generates styles by searching for class names in
-                HTML, JavaScript, and templates, and then outputs them in a
-                single CSS file.
-              </div>
-            </div><div>
-              <div>
-                <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
-                >
-                  <ion-icon
-                    aria-label="scan outline"
-                    class="hydrated md h-4 w-4"
-                    name="scan-outline"
-                    role="img"></ion-icon>
-                </div><p
-                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
-                >
-                  Relived with Alpine.js
-                </p>
-              </div><div class="mt-4 text-gray-500 text-sm">
-                Alpine is a rugged, minimal tool for for adding behavior to your
-                markup, similar to jQuery but for the modern web.
-              </div>
-            </div><div>
-              <div>
-                <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
-                >
-                  <ion-icon
-                    aria-label="scan outline"
-                    class="hydrated md h-4 w-4"
-                    name="scan-outline"
-                    role="img"></ion-icon>
-                </div><p
-                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
-                >
-                  Keyboard accessible.
-                </p>
-              </div><div class="mt-4 text-gray-500 text-sm">
-                Everything I build is keyboard accessible, and I meticulously
-                write the markup to deliver the best screenreader experience I
-                can provide.
-              </div>
-            </div><div>
-              <div>
-                <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
-                >
-                  <ion-icon
-                    aria-label="scan outline"
-                    class="hydrated md h-4 w-4"
-                    name="scan-outline"
-                    role="img"></ion-icon>
-                </div><p
-                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
-                >
-                  Production-ready
-                </p>
-              </div><div class="mt-4 text-gray-500 text-sm">
-                I tested the template in the latest versions of all browsers to
-                handle lots of edge-cases you might encounter.
-              </div>
-            </div><div>
-              <div>
-                <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
-                >
-                  <ion-icon
-                    aria-label="scan outline"
-                    class="hydrated md h-4 w-4"
-                    name="scan-outline"
-                    role="img"></ion-icon>
-                </div><p
-                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
-                >
-                  Simple deploys
-                </p>
-              </div><div class="mt-4 text-gray-500 text-sm">
-                The template is ready for production and can be deployed
-                anywhere static websites can, such as Vercel, Netlify, or GitHub
-                Pages, and more.
-              </div>
-            </div>
-          </div>
+
+    <div
+      class="relative py-12 mx-auto overflow-hidden overflow-x-hidden 2xl:max-w-screen-xl"
+    >
+      <div class="grid justify-between w-full">
+        <div
+          class="absolute inset-0 left-0 z-10 from-white via-transparent w-44 bg-gradient-to-r"
+        >
+        </div>
+        <div
+          class="absolute inset-0 left-0 z-10 ml-auto from-white via-transparent w-44 bg-gradient-to-l"
+        >
         </div>
       </div>
+      <div class="relative flex items-center gap-2 whitespace-nowrap t">
+        <span
+          class="inline-flex items-center font-medium relative text-base-700 bg-base-50 px-4 py-1.5 text-sm rounded-lg"
+        >
+          Secure Transactions
+        </span><span
+          class="inline-flex items-center font-medium relative text-base-700 bg-base-50 px-4 py-1.5 text-sm rounded-lg"
+        >
+          Proxy Voting Capabilities
+        </span><span
+          class="inline-flex items-center font-medium relative text-base-700 bg-base-50 px-4 py-1.5 text-sm rounded-lg"
+        >
+          Swift and Effortless Account Setup
+        </span><span
+          class="inline-flex items-center font-medium relative text-base-700 bg-base-50 px-4 py-1.5 text-sm rounded-lg"
+        >
+          Merging Identical Entries
+        </span><span
+          class="inline-flex items-center font-medium relative text-base-700 bg-base-50 px-4 py-1.5 text-sm rounded-lg"
+        >
+          Customized Domain Options
+        </span><span
+          class="inline-flex items-center font-medium relative text-base-700 bg-base-50 px-4 py-1.5 text-sm rounded-lg"
+        >
+          Allow Guest Financial Insights
+        </span><span
+          class="inline-flex items-center font-medium relative text-base-700 bg-base-50 px-4 py-1.5 text-sm rounded-lg"
+        >
+          Advanced Textual Analysis Tools
+        </span><span
+          class="inline-flex items-center font-medium relative text-base-700 bg-base-50 px-4 py-1.5 text-sm rounded-lg"
+        >
+          Tailored Brand Color Schemes
+        </span><span
+          class="inline-flex items-center font-medium relative text-base-700 bg-base-50 px-4 py-1.5 text-sm rounded-lg"
+        >
+          Define Financial Profile Images
+        </span><span
+          class="inline-flex items-center font-medium relative text-base-700 bg-base-50 px-4 py-1.5 text-sm rounded-lg"
+        >
+          Choose Between Dark and Light Finance Views
+        </span><span
+          class="inline-flex items-center font-medium relative text-base-700 bg-base-50 px-4 py-1.5 text-sm rounded-lg"
+        >
+          Priority Account Alerts
+        </span><span
+          class="inline-flex items-center font-medium relative text-base-700 bg-base-50 px-4 py-1.5 text-sm rounded-lg"
+        >
+          Internal Financial Discussions
+        </span>
+      </div>
     </div>
+    <dl
+      class="grid grid-cols-2 text-center gap-x-6 gap-y-12 lg:grid-cols-4 lg:gap-y-16"
+    >
+      <div>
+        <div class="flex flex-col gap-3 text-accent-600">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="icon icon-tabler icons-tabler-outline icon-tabler-filter size-5 mx-auto"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M12 8m-5 0a5 5 0 1 0 10 0a5 5 0 1 0 -10 0"></path>
+            <path d="M8 11a5 5 0 1 0 3.998 1.997"></path>
+            <path d="M12.002 19.003a5 5 0 1 0 3.998 -8.003"></path>
+          </svg>
+          <dt>
+            <h3
+              class="text-base leading-normal sm:text-lg md:text-xl text-base-900 font-medium"
+            >
+              Live editing
+            </h3>
+          </dt>
+        </div>
+        <dd>
+          <p class="text-base leading-normal mt-2 text-base-500 font-medium">
+            Instantly see the result of every change you make.
+          </p>
+        </dd>
+      </div>
+      <div>
+        <div class="flex flex-col gap-3 text-accent-600">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="icon icon-tabler icons-tabler-outline icon-tabler-wave-square size-5 mx-auto"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M3 12h5v8h4v-16h4v8h5"></path>
+          </svg>
+          <dt>
+            <h3
+              class="text-base leading-normal sm:text-lg md:text-xl text-base-900 font-medium"
+            >
+              Autocompletion
+            </h3>
+          </dt>
+        </div>
+        <dd>
+          <p class="text-base leading-normal mt-2 text-base-500 font-medium">
+            Spotless will suggest the right classes for you as you type.
+          </p>
+        </dd>
+      </div>
+      <div>
+        <div class="flex flex-col gap-3 text-accent-600">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-iteration size-5 mx-auto"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M8.5 16a5.5 5.5 0 1 0 -5.5 -5.5v.5"></path>
+            <path d="M3 16h18"></path>
+            <path d="M18 13l3 3l-3 3"></path>
+          </svg>
+          <dt>
+            <h3
+              class="text-base leading-normal sm:text-lg md:text-xl text-base-900 font-medium"
+            >
+              Hide/show classes
+            </h3>
+          </dt>
+        </div>
+        <dd>
+          <p class="text-base leading-normal mt-2 text-base-500 font-medium">
+            Hide or show classes to see how your design changes.
+          </p>
+        </dd>
+      </div>
+      <div>
+        <div class="flex flex-col gap-3 text-accent-600">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="icon icon-tabler icons-tabler-outline icon-tabler-plus size-5 mx-auto"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M12 5l0 14"></path>
+            <path d="M5 12l14 0"></path>
+          </svg>
+          <dt>
+            <h3
+              class="text-base leading-normal sm:text-lg md:text-xl text-base-900 font-medium"
+            >
+              Color preview
+            </h3>
+          </dt>
+        </div>
+        <dd>
+          <p class="text-base leading-normal mt-2 text-base-500 font-medium">
+            See the color of every class in the autocompletion view.
+          </p>
+        </dd>
+      </div>
+    </dl>
   </div>
 </section>
